# clevercloud-sdk-rust

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
examples/cleverctl/: Cargo.toml  README.md
examples/cleverctl/src/: cfg.rs  main.rs
examples/cleverctl/src/cmd/: mod.rs  myself.rs  zone.rs
examples/cleverctl/src/cmd/addon/: mod.rs
examples/cleverctl/src/cmd/addon/config_provider/: environment.rs  mod.rs
examples/cleverctl/src/cmd/functions/: deployments.rs  mod.rs
examples/cli/: Cargo.toml  README.md
examples/cli/src/: cfg.rs  main.rs
examples/cli/src/cmd/: addon.rs  mod.rs  myself.rs  zone.rs
src/: lib.rs
src/v2/: addon.rs  mod.rs  myself.rs  plan.rs
src/v4/: mod.rs
src/v4/addon_provider/: elasticsearch.rs  mod.rs  mongodb.rs  mysql.rs  plan.rs  postgresql.rs  redis.rs
src/v4/addon_provider/config_provider/: mod.rs
src/v4/addon_provider/config_provider/addon/: environment.rs  mod.rs
src/v4/addon_provider/postgresql/: mod.rs  plan.rs
src/v4/functions/: deployments.rs  mod.rs
src/v4/products/: mod.rs  zones.rs
