[package]
name = "clevercloud-sdk"
description = "A rust client and structures to interact with the Clever-Cloud API."
version = "0.13.6"
edition = "2024"
rust-version = "1.85.0"
authors = ["Florentin Dubois <florentin.dubois@clever-cloud.com>"]
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/CleverCloud/clevercloud-sdk-rust"
keywords = ["clevercloud", "sdk", "logging", "metrics", "jsonschemas"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "^0.1.88"
chrono = { version = "^0.4.40", features = ["serde"] }
oauth10a = { version = "^2.0.2", default-features = false, features = [
    "client",
] }
log = { version = "^0.4.26", optional = true }
schemars = { version = "^0.8.22", features = [
    "chrono",
    "indexmap1",
    "uuid1",
    "bytes",
    "url",
], optional = true }
serde = { version = "^1.0.219", features = ["derive"] }
serde_repr = "^0.1.20"
serde_json = "^1.0.140"
thiserror = "^2.0.12"
tracing = { version = "^0.1.41", optional = true }
uuid = { version = "^1.16.0", features = ["serde", "v4"] }

[features]
default = ["logging"]
jsonschemas = ["schemars"]
logging = ["oauth10a/logging", "tracing/log-always", "log"]
metrics = ["oauth10a/metrics"]
tracing = ["oauth10a/tracing", "dep:tracing"]
tokio = ["oauth10a/tokio"]
