[package]
name = "cleverctl"
description = "A command line interface that use the clevercloud-sdk"
authors = ["Florentin Dubois <florentin.dubois@clever-cloud.com>"]
rust-version = "1.77.0"
version = "0.11.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "^0.1.72"
clevercloud-sdk = { path = "../..", features = ["tokio", "metrics", "trace", "jsonschemas"] }
clap = { version = "^4.3.19", features = ["derive"] }
config = "^0.13.3"
paw = "^1.0.0"
serde = { version = "^1.0.179", features = ["derive"] }
serde_json = "^1.0.104"
serde_yaml = "^0.9.25"
thiserror = "^1.0.44"
tokio = { version = "^1.29.1", features = ["full"] }
tracing = "^0.1.37"
tracing-subscriber = { version = "^0.3.17", default-features = false, features = ["std", "ansi", "tracing-log"] }

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1
