[package]
name = "cleverctl"
description = "A command line interface that use the clevercloud-sdk"
authors = ["Florentin Dubois <florentin.dubois@clever-cloud.com>"]
rust-version = "1.84.1"
version = "0.11.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "^0.1.86"
clevercloud-sdk = { path = "../..", features = [
    "tokio",
    "metrics",
    "tracing",
    "jsonschemas",
] }
clap = { version = "^4.5.29", features = ["derive"] }
config = "0.15.8"
paw = "^1.0.0"
serde = { version = "^1.0.217", features = ["derive"] }
serde_json = "^1.0.138"
serde_yaml = "^0.9.33"
thiserror = "^2.0.11"
tokio = { version = "^1.43.0", features = ["full"] }
tracing = "^0.1.41"
tracing-subscriber = { version = "^0.3.19", default-features = false, features = [
    "std",
    "ansi",
    "tracing-log",
] }

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1
