[package]
name = "cleverctl"
description = "A command line interface that use the clevercloud-sdk"
authors = ["Florentin Dubois <florentin.dubois@clever-cloud.com>"]
rust-version = "1.85.0"
version = "0.14.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clevercloud-sdk = { path = "../..", features = [
    "tokio",
    "metrics",
    "tracing",
    "jsonschemas",
] }
clap = { version = "^4.5.32", features = ["derive"] }
config = "0.15.11"
paw = "^1.0.0"
serde = { version = "^1.0.218", features = ["derive"] }
serde_json = "^1.0.140"
serde_yaml = "^0.9.33"
thiserror = "^2.0.12"
tokio = { version = "^1.44.1", features = ["full"] }
tracing = "^0.1.41"
tracing-subscriber = { version = "^0.3.19", default-features = false, features = [
    "std",
    "ansi",
    "tracing-log",
] }

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1
