[package]
name = "cli"
description = "A command line interface that use the clevercloud-sdk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "^0.1.51"
clevercloud-sdk = { path = "../..", features = ["tokio", "metrics", "trace", "jsonschemas"] }
config = "^0.11.0"
paw = "^1.0.0"
serde = { version = "^1.0.130", features = ["derive"] }
serde_json = "^1.0.72"
serde_yaml = "^0.8.21"
slog = "^2.7.0"
slog-async = "^2.7.0"
slog-term = "^2.8.0"
slog-scope = "^4.4.0"
structopt = { version = "^0.3.25", features = ["paw"] }
tokio = { version = "^1.14.0", features = ["full"] }
